src/pages/messagingPage/MessagesPage.css
.messagesPage {
  margin-top: 80px;
  height: calc(100vh - 80px);
  width: 100vw;
  /* overflow: hidden; */
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
}

.messagesPage header div {
  height: 100%;
  width: calc(100% - 20px);
  padding-left: 20px;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: left;
  /* padding: 0; */
  color: rgb(77, 77, 77);
  font-weight: 600;
  border-right: 1px solid rgb(196, 196, 196);
}

.messagesPage header span {
  text-align: left;
  padding: 5px 10px;
  font-weight: bold;
  display: flex;
  flex-direction: column;
}
.messagesPage header span p {
  /* font-size: 12px; */
  margin: 0;
}

.messageUser-name {
  color: rgb(77, 77, 77);
  font-size: 18px;
  font-weight: 600;
}

.messageUser-name:hover {
  color: #0a66c2;
  cursor: pointer;
  text-decoration: underline;
}
.messageUser-title {
  font-size: 13px;
  color: rgb(133, 133, 133);
  font-weight: light;
}

.messagesPageContainer {
  border-radius: 10px;
  border-top: none;
  margin-top: 100px;
  display: grid;
  grid-template-columns: 270px auto;
  width: 90%;
  max-width: 1300px;
  background-color: #fff;
  min-height: 60vh;

  border: 1px solid rgb(196, 196, 196);
}
.messagesPage__otherChats {
  min-height: 60vh;
  width: 100%;
  height: 100%;
  /* overflow-y: scroll; */
  /* background-color: rgb(20, 20, 2); */
  border-right: 1px solid rgb(196, 196, 196);
  /* border-radius: 10px; */
  /* border-top-left-radius: 10px; */
}
.currentMessage__messages {
  /* background-color: blue; */
  padding-top: 100px;
  height: 450px;
  width: 100%;
  max-height: 100%;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  padding-top: 10px;
}

.messageInput-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 90px;
  justify-content: center;
  position: relative;
}
.messageInput-section button {
  background-color: #0a6bc2;
  color: #fff;
  width: 60px;
  position: absolute;
  right: 10px;
  border: none;
  border-radius: 15px;
  margin-left: 1%;
  height: 30px;
}

.messageInput {
  width: calc(100% - 90px);
  /* margin-left: 0.5%; */
  height: 50px;
  border-radius: 0;
  border-left: none;
  border-right: none;
  border-top: 1px solid rgb(196, 196, 196);
  border-bottom: 1px solid rgb(196, 196, 196);
  padding: 0;
  margin-right: 90px;
  margin-left: 10px;
}

.messagesPage__prevMessages {
  height: 450px;
  /* background-color: blue; */
}
.no-chats {
  height: 80%;
  width: 100%;
  /* background-color: yellow; */
  display: flex;
  align-items: center;
  justify-content: center;
}
.allChats-header {
  border-bottom: 1px solid rgb(196, 196, 196);
  padding: 5px 15px;
  display: flex !important;
  align-items: center;
  justify-content: left;
  height: 50px !important;
  font-size: 18px;
  font-weight: 600;
  color: rgb(77, 77, 77);
  /* border-radius: 10px; */
}

.currentMessages-header {
  height: 50px !important;

  display: flex !important;
  align-items: center;

  /* background-color: green !important; */
  border-bottom: 1px solid rgb(196, 196, 196);
  padding: 5px 10px;
}

.currentMessages-header div {
  display: flex;
  flex-direction: column !important;
  align-items: flex-start;
  margin-left: 10px;
}

.currentMessages-header .back {
  font-size: 35px;

  font-weight: bold !important;
  cursor: pointer;
}

.currentMessages-header .back:hover {
  color: #0a6bc2;
}

.currentMessages-header p {
  margin: 0;
}
.currentMessage__messages .no_messages {
  height: 100%;
  margin: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: 600;
}
.currentMessage__messages .user-message,
.currentMessage__messages .my-message {
  /* height: 20px; */
  /* background: blue; */
  display: flex;
  border-radius: 15px;
  margin-left: 10px;
  margin: 5px 0;
}

.currentMessage__messages .msgSection2 {
  margin-left: 5px;
}

.currentMessage__messages .user-message,
.currentMessage__messages .my-message {
  text-align: left;
  margin-left: 10px;
  min-height: 60px;
}

/* 
.currentMessage__messages .my-message {
  text-align: right;
  margin-right: 10px;
} */
.currentMessage__messages .date-label {
  color: rgb(82, 82, 82);
  text-align: center;
  font-size: 14px;
  width: 100%;
  border-bottom: 1px solid rgb(184, 184, 184);
  line-height: 0.1em;
  margin: 10px 0 20px;
  font-weight: 500;
}

.currentMessage__messages span {
  background: #fff;
  /* padding: 0 10px; */
}
.currentMessage__messages .messageAuthorName {
  margin: 0;
  font-size: 13px;
  font-weight: bold;
  margin-right: 2px;
  color: rgb(79, 79, 79);
}

.my-message .messageHeader,
.user-message .messageHeader {
  display: flex;
  justify-content: left;
  align-items: center;
}
.my-message .messageItem {
  /* background-color: #0a6bc2; */
  /* margin-top: 5px; */
  color: black;
}
.user-message .messageItem {
  /* background-color: #ebebeb; */
  color: black;
}
.currentMessage__messages .messageTime {
  margin: 0;
  color: grey;

  font-size: 11px;
}

.currentMessage__messages .messageItem {
  margin: 5px 0 0 0;
  /* max-width: 45%; */

  padding: 0px;
  display: inline-block;
  border-radius: 10px;
}

.currentMessage__messages .messages-user-photo-noPhoto,
.currentMessage__messages .messages-user-photo {
  height: 40px;
  width: 40px;
  object-fit: cover;
  border-radius: 50%;
  color: grey;
}

.currentMessage__messages .messages-user-photo-noPhoto {
  color: grey;
}

.currentChatUser-summary {
  height: 120px !important;
  min-height: 120px !important;
  border-top: none !important;
  display: flex !important;
  flex-direction: column !important;
  /* justify-content: left !important; */
  align-items: flex-start !important;
  padding: 0 10px !important;
  width: 100% !important;
}
.currentChatUser-summary-name {
  margin: 5px 0 0 0;
  font-weight: 600;
  cursor: pointer;
}
.currentChatUser-summary-name:hover {
  color: #0a66c2;
  text-decoration: underline;
}
.currentChatUser-summary-title {
  margin: 5px 0 0 0;
  font-size: 13px;
}
.currentChatUser-summary-photo {
  height: 70px;
  width: 70px;
  color: grey;
  object-fit: cover;
  border-radius: 50px;
}

.hide-otherChats {
  border-right: 1px solid rgb(196, 196, 196);
  display: none;
}
.currentMessages-noUser {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 18px;
  font-weight: bold;
  height: 100%;
  width: 100%;
  color: rgb(43, 43, 43);
}
@media screen and (max-width: 630px) {
  .messagesPage__currentMessages {
    display: hidden;
  }

  .messagesPageContainer {
    display: flex;
    flex-direction: column;
    position: relative;

    border: none;
  }

  .messagesPage__currentMessages {
    /* background-color: green; */
    border-radius: 10px;
    min-height: 60vh;
    border: 1px solid rgb(196, 196, 196);
  }

  .messagesPage__otherChats {
    position: absolute;
    top: 0px;
    background-color: #fff;
    border: 1px solid rgb(196, 196, 196);
    border-radius: 10px;
  }
  .allChats-header {
    /* text-align: center; */
    /* justify-content: center; */
  }
}

